--- a/Course1/datingWebsite.html
+++ b/Course1/datingWebsite.html
@@ -7,6 +7,9 @@
   <style>
     fieldset {background: lightyellow; border: 10px solid yellow; margin-bottom: 10px; width: 720px}
     label {width: 180px; display: inline-block; text-align: right; vertical-align: top}
+    label:hover {font-size:20px}
+    input:hover {font-size: 20px}
+    legend:hover {font-size: 30px}
     /*label checkbox {width: auto}
     label radio {width: auto}*/
     span.rangeEnd {text-align: center}
@@ -22,7 +25,7 @@
 
   <h1> Please Enter Your Details For Our Dating Website! </h1>
 
-  <form action = "TODO" method = "get" enctype= "TODO">
+  <form action = "http://ihome.ust.hk/~rossiter/cgi-bin/show_everything.php" method = "get" enctype= "multipart/form-data">
   <fieldset>
     <legend>Your Face</legend>
 
@@ -74,6 +77,8 @@
   <input type = "submit" value = "Submit">
 
 </form>
+
+<script src="https://www.cse.ust.hk/~rossiter/dating_web_site.js"></script>
 
 </body>
 
