--- a/Course1/matchingGame.html
+++ b/Course1/matchingGame.html
@@ -10,36 +10,30 @@
   div {
     position:absolute;
   }
-    #rightSide {
-      left: 500px;
-      border-left: 1px solid black;
-    }
+  #leftSide {
+    width: 500px;
+  }
+  #rightSide {
+    top: 100px;
+    left: 700px;
+  }
+  #line {
+    width: 1px;
+    height: 500px;
+
+  }
   </style>
 </head>
 
-<body onload = "generateFaces()">
+<body onload = "startGame()">
   <h1>Matching Game </h1>
   <p1> Click on the extra smiling face on the left. </p1>
 
-  <div id="leftSide">hello</div>
+  <div id="leftSide"></div>
+  <hr id="line">
   <div id="rightSide"></div>
 
-  <script>
-  var numberOfFaces = 5;
-  var theLeftSide = document.getElementById("leftSide")
-
-  function generateFaces(){
-    theLeftSide.backgroundColor = "blue";
-    for (var count in numberOfFaces){
-      var face = document.createElement("img");
-      face.src = "http://home.cse.ust.hk/~rossiter/mooc/matching_game/smile.png";
-      var topPx = Math.floor(Math.random()*401);
-      var leftPx = Math.floor(Math.random()*401);
-      face.style.top = topPx + "px";
-      face.style.left = leftPx + "px";
-      theLeftSide.appendChild(face);
-    }
-  }
+  <script src = "file:///Users/jiayueli/Documents/Projects/Full-Stack-Web-Dev-Course/webDevCourseProjects/Course1/matchingGame.js">
   </script>
 </body>
 
