--- a/Course2/conFusion/index.html
+++ b/Course2/conFusion/index.html
@@ -23,7 +23,7 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-  <link href="css/myStyle.css" rel="stylesheet">
+  <link href="css/mystyles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -40,13 +40,14 @@
               </div>
               <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                  <li class="active"><a href="/Users/jiayueli/Documents/Projects/Full-Stack-Web-Dev-Course/webDevCourseProjects/Course2/conFusion/index.html"><span class="glyphicon glyphicon-home"
+                  <li class="active"><a href="#"><span class="glyphicon glyphicon-home"
    aria-hidden="true"></span> Home</a></li>
-                 <li><a href="/Users/jiayueli/Documents/Projects/Full-Stack-Web-Dev-Course/webDevCourseProjects/Course2/conFusion/about.html"><span class = "glyphicon glyphicon-info-sign"
+                 <li><a href="aboutus.html"><span class = "glyphicon glyphicon-info-sign"
                    aria-hidden = "true"></span> About</a></li>
                     <li class="dropdown">
                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                         role="button" aria-haspopup="true" aria-expanded="false">
+                        <span class = "glyphicon glyphicon-list-alt" aria-hidden = "true"></span>
                         Menu <span class="caret"></span></a>
                        <ul class="dropdown-menu">
                            <li><a href="#">Appetizers</a></li>
@@ -59,7 +60,7 @@
                            <li><a href="#">Weekend Brunch</a></li>
                        </ul>
                     </li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contactus.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
                 </ul>
           </div>
     </nav>
