--- a/Course2/conFusion/index.html
+++ b/Course2/conFusion/index.html
@@ -36,12 +36,12 @@
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+                  <a class="navbar-brand" href="#"><img src="img/logo.png" height=30 width=41></a>
               </div>
               <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                   <li class="active"><a href="#"><span class="glyphicon glyphicon-home"
-   aria-hidden="true"></span> Home</a></li>
+                    aria-hidden="true"></span> Home</a></li>
                  <li><a href="aboutus.html"><span class = "glyphicon glyphicon-info-sign"
                    aria-hidden = "true"></span> About</a></li>
                     <li class="dropdown">
@@ -62,7 +62,23 @@
                     </li>
                     <li><a href="contactus.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
                 </ul>
+
+                <form class = "navbar-form form-inline navbar-right">
+                  <span class = "form-group">
+                    <label class = "sr-only" for = "email">Email Address:</label>
+                    <input type = "email" class = "form-control" id="email" placeholder="Email">
+                  </span>
+                  <span>
+                    <label class = "sr-only" for = "password">Password:</label>
+                    <input type = "password" class ="form-control" id="password" placeholder="Password">
+                  </span>
+                  <span class = "checkbox">
+                    <label><input type = "checkbox">Remember Me</label>
+                  </span>
+                  <a href = "#"> <button type = "submit" class = "btn btn-info">Submit</button></a>
+                </form>
           </div>
+        </div>
     </nav>
     <header class = "jumbotron">
 
@@ -75,7 +91,13 @@
                     <p style="padding:40px;"></p>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class = "col-xs-12 col-sm-4">
+                <div class = "col-xs-12 col-sm-2">
+                  <p style = "padding: 20px;"> </p>
+                  <img src = "img/logo.png" class = "img-responsive" height=500 width=500"">
+                </div>
+                <div class = "col-xs-12 col-sm-2" >
+                  <p style = "padding: 20px;"> </p>
+                  <a href="#bottomForm"><button type = "button" class = "btn btn-warning">Reserve</button></a>
                 </div>
             </div>
         </div>
@@ -92,11 +114,24 @@
                 <h3 align=center>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class = "col-xs-12 col-sm-9 col-sm-pull-3">
-                <h2>Uthappizza</h2>
-                <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
-                <p><a  href="#">More &raquo;</a></p>
+              <div class="media">
+                <div class="media-left media-middle">
+                    <a href="#">
+                    <img class="media-object img-thumbnail"
+                     src="img/uthappizza.png" alt="Uthappizza">
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h2 class="media-heading">Uthappizza <span class="label label-danger">Hot</span> <span class="badge">$4.99</span></h2>
+                    <p>A unique combination of Indian Uthappam (pancake) and
+                      Italian pizza, topped with Cerignola olives, ripe vine
+                      cherry tomatoes, Vidalia onion, Guntur chillies and
+                      Buffalo Paneer.</p>
+                    <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                </div>
+              </div>
             </div>
-        </div>
+          </div>
 
 
         <div class = "row row-content">
@@ -105,9 +140,22 @@
                 <h3 align=center>This Month's Promotions</h3>
             </div>
             <div class = "col-xs-12 col-sm-9">
-                <h2>Weekend Grand Buffet</h2>
+                <!-- <h2>Weekend Grand Buffet</h2>
                 <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
-                <p><a href="#">More &raquo;</a></p>
+                 <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p> -->
+                 <div class="media">
+                   <div class="media-body">
+                       <h2 class="media-heading">Weekend Grand Buffet <span class = "label label-danger">New</span></h2>
+                       <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                       <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                   </div>
+                   <div class="media-right media-middle">
+                       <a href="#">
+                       <img class="media-object img-thumbnail"
+                        src="img/buffet.png" alt="buffet">
+                       </a>
+                   </div>
+                 </div>
             </div>
         </div>
 
@@ -117,13 +165,99 @@
                 <h3 align=center>Meet our Culinary Specialists</h3>
             </div>
             <div class = "col-xs-12 col-sm-9 col-sm-pull-3">
-                <h2>Alberto Somayya</h2>
-                <h4>Executive Chef</h4>
-                <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
-                <p><a href="#">More &raquo;</a></p>
+              <div class="media">
+                <div class="media-left media-middle">
+                    <a href="#">
+                    <img class="media-object img-thumbnail"
+                     src="img/alberto.png" alt="Alberto Somayya">
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h2 class="media-heading">Alberto Somayya</h2>
+                    <h4>Executive Chef</h4>
+                    <p>Award winning three-star Michelin chef with wide
+                     International experience having worked closely with
+                     whos-who in the culinary world, he specializes in
+                      creating mouthwatering Indo-Italian fusion experiences.
+                     </p>
+                    <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                </div>
+              </div>
             </div>
         </div>
-    </div>
+
+        <div class = "row row-content">
+
+          <div class = "col-xs-12 col-sm-3">
+            <h3 align = "center">Reserve a Table</h3>
+          </div>
+
+          <div class = "col-xs-12 col-sm-9">
+
+            <div class ="alert alert-warning alert-dismissible" role = "alert">
+                <button type = "button" class = "close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+                <strong>Warning: </strong>Please
+                <a href = "tel:+85212345678">call</a>
+                us to reserve for more than six guests.
+            </div>
+
+            <form class = "form horizontal" role ="form">
+              <div class = "form-group">
+                  <div class = "col-xs-12 col-sm-4">
+                    <label for="numGuests">Number of Guests</label>
+                  </div>
+                  <div class = "col-xs-12 col-sm-8">
+                    <span class = "numGuests" style = "padding: 10px;">
+                      <input id = "1Guest" type="radio">
+                      <label for = "1Guest" style = "padding: 3px;">1</label>
+                    </span>
+                    <span class = "numGuests" style = "padding: 10px;">
+                      <input id = "2Guest" type="radio">
+                      <label for = "2Guest" style = "padding: 3px;">2</label>
+                    </span>
+                    <span class = "numGuests" style = "padding: 10px;">
+                      <input id = "3Guest" type="radio">
+                      <label for = "3Guest" style = "padding: 3px;">3</label>
+                    </span>
+                    <span class = "numGuests" style = "padding: 10px;">
+                      <input id = "4Guest" type="radio">
+                      <label for = "4Guest" style = "padding: 3px;">4</label>
+                    </span>
+                    <span class = "numGuests" style = "padding: 10px;">
+                      <input id = "5Guest" type="radio">
+                      <label for = "5Guest" style = "padding: 3px;">5</label>
+                    </span>
+                </div>
+              </div>
+
+
+              <div class ="form-group has-feedback">
+                <div class = "col-xs-12 col-sm-4">
+                  <label for ="DateandTime">Date and Time</label>
+                </div>
+                <div class = "col-xs-12 col-sm-4">
+                  <input type = "date" class = "form-control" placeholder="Date">
+                  <span class = "glyphicon glyphicon-calendar form-control-feedback"></span>
+                </div>
+                <div class = "col-xs-12 col-sm-4">
+                  <input type = "time" class = "form-control" placeholder="Time">
+                  <span class = "glyphicon glyphicon-time form-control-feedback"></span>
+                </div>
+              </div>
+
+              <div class="form-group">
+                  <div class="col-xs-12 col-sm-10">
+                      <button type="submit" class="btn btn-primary">Reserve</button>
+                  </div>
+              </div>
+            </form>
+
+          </div>
+        </div>
+
+        </div>
 
     <footer>
         <div class = "container">
@@ -168,7 +302,8 @@
         </div>
     </footer>
 
-
+    <a id = "bottomForm"><div>hi
+    </div></a>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
