--- a/Course2/conFusion/index.html
+++ b/Course2/conFusion/index.html
@@ -62,24 +62,83 @@
                     </li>
                     <li><a href="contactus.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
                 </ul>
-
-                <form class = "navbar-form form-inline navbar-right">
-                  <span class = "form-group">
-                    <label class = "sr-only" for = "email">Email Address:</label>
-                    <input type = "email" class = "form-control" id="email" placeholder="Email">
-                  </span>
-                  <span>
-                    <label class = "sr-only" for = "password">Password:</label>
-                    <input type = "password" class ="form-control" id="password" placeholder="Password">
-                  </span>
-                  <span class = "checkbox">
-                    <label><input type = "checkbox">Remember Me</label>
-                  </span>
-                  <a href = "#"> <button type = "submit" class = "btn btn-info">Submit</button></a>
-                </form>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a data-toggle="modal" data-target="#loginModal">
+                    <span class="glyphicon glyphicon-log-in"></span> Login</a>
+                    </li>
+                </ul>
           </div>
         </div>
     </nav>
+
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Login </h4>
+            </div>
+            <div class="modal-body">
+              <form class = "form-inline">
+                <div class = "form-group">
+                  <label class = "sr-only" for = "email">Email Address:</label>
+                  <input type = "email" class = "form-control input-sm" id="email" placeholder="Email">
+                </div>
+                <div class = "form-group">
+                  <label class = "sr-only" for = "password">Password:</label>
+                  <input type = "password" class ="form-control input-sm" id="password" placeholder="Password">
+                </div>
+                <div class = "checkbox">
+                  <label><input type = "checkbox">Remember Me</label>
+                </div>
+                <a href = "#"> <button type = "submit" class = "btn btn-info btn-sm">Sign In</button></a>
+                <button type="button" class="btn btn-default btn-sm"
+                       data-dismiss="modal">Cancel</button>
+              </form>
+
+            </div>
+        </div>
+        </div>
+    </div>
+
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+
+          <div class = "modal-header">
+            <button type = "button" class = "close"
+              data-dismiss = "modal">&times;
+            </button>
+            <h4 class="modal-title">Reserve Table</h4>
+          </div>
+
+          <div class ="modal-body">
+
+            <form class = "form horizontal" role = "form">
+              <div class = "form-group">
+                
+                  <label for = "numGuests">Number of Guests:
+                  </label>
+
+
+                  <input type="radio" value = "1" required>
+                  <span class= "numGuests" style ="padding: 10px;">1</span>
+                  <input type = "radio" value = "2">
+                  <span class= "numGuests" style ="padding: 10px;">2</span>
+
+              </div>
+            </form>
+
+          </div>
+
+        </div>
+
+        </div>
+    </div>
+
+
     <header class = "jumbotron">
 
         <!-- Main component for a primary marketing message or call to action -->
@@ -93,11 +152,13 @@
                 </div>
                 <div class = "col-xs-12 col-sm-2">
                   <p style = "padding: 20px;"> </p>
-                  <img src = "img/logo.png" class = "img-responsive" height=500 width=500"">
+                  <img src = "img/logo.png" class = "img-responsive">
                 </div>
                 <div class = "col-xs-12 col-sm-2" >
                   <p style = "padding: 20px;"> </p>
-                  <a href="#bottomForm"><button type = "button" class = "btn btn-warning">Reserve</button></a>
+                  <a type="button" data-toggle="modal" data-target="#reserveModal" class="btn btn-warning btn-block"
+                    href="#reserveform">
+                     Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -108,6 +169,72 @@
     </ol> -->
 
     <div class = "container">
+
+      <div class="row row-content">
+        <div class="col-xs-12">
+          <div id="mycarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#mycarousel" data-slide-to="1"></li>
+                <li data-target="#mycarousel" data-slide-to="2"></li>
+            </ol>
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <img class="img-responsive"
+                     src="img/uthappizza.png" alt="Uthappizza">
+                    <div class="carousel-caption">
+                    <h2>Uthappizza  <span class="label label-danger">Hot</span> <span class="badge">$4.99</span></h2>
+                    <p>A unique combination of Indian Uthappam (pancake) and
+                      Italian pizza, topped with Cerignola olives, ripe vine
+                      cherry tomatoes, Vidalia onion, Guntur chillies and
+                      Buffalo Paneer.</p>
+                    <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <img class="img-responsive"
+                     src="img/buffet.png" alt="buffet">
+                    <div class="carousel-caption">
+                    <h2>Weekend Grand Buffet <span class="label label-danger label-xs">New</span></h2>
+                    <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                    <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <a href="#">
+                    <img class="media-object img-thumbnail"
+                     src="img/alberto.png" alt="Alberto Somayya">
+                    </a>
+                    <div class="carousel-caption">
+                     <h3 align=center>Meet our Culinary Specialists</h3>
+                     <h2>Alberto Somayya</h2>
+                     <h4>Executive Chef</h4>
+                     <p>Award winning three-star Michelin chef with wide
+                      International experience having worked closely with
+                      whos-who in the culinary world, he specializes in
+                       creating mouthwatering Indo-Italian fusion experiences.
+                     </p>
+                    </div>
+                </div>
+
+                <!-- Controls -->
+               <a class="left carousel-control" href="#mycarousel" role="button" data-slide="prev">
+                   <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                   <span class="sr-only">Previous</span>
+               </a>
+               <a class="right carousel-control" href="#mycarousel" role="button" data-slide="next">
+                   <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                   <span class="sr-only">Next</span>
+               </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
         <div class = "row row-content">
             <div class = "col-xs-12 col-sm-3 col-sm-push-9">
                 <p style="padding:20px;"></p>
@@ -188,8 +315,10 @@
 
         <div class = "row row-content">
 
-          <div class = "col-xs-12 col-sm-3">
+          <div class="col-xs-12 col-sm-3">
+            <a id = "reserveform"> <div class = "col-xs-12 col-sm-3">
             <h3 align = "center">Reserve a Table</h3>
+            </div></a>
           </div>
 
           <div class = "col-xs-12 col-sm-9">
@@ -257,7 +386,7 @@
           </div>
         </div>
 
-        </div>
+      </div>
 
     <footer>
         <div class = "container">
@@ -302,12 +431,17 @@
         </div>
     </footer>
 
-    <a id = "bottomForm"><div>hi
-    </div></a>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="js/bootstrap.min.js"></script>
+  <script>
+    $(document).ready(function(){
+    $('[data-toggle="tooltip"]').tooltip();
+     });
+  </script>
+
 </body>
 
 </html>
