--- a/Course3/conFusion/app/dishdetails.html
+++ b/Course3/conFusion/app/dishdetails.html
@@ -59,54 +59,63 @@
               </blockquote>
             </div>
             <div class="col-xs-9 col-xs-offset-1" ng-controller="DishCommentController">
-                    <ul class="list-unstyled">
-						<p>Task 3: Here you include the code to show the live preview of the comment</p>
-						<p>The comment should be shown only when the form contains valid
-						information and is not pristine</p>
-                    </ul>
+                    <span ng-show="!commentForm.$invalid && !commentForm.$pristine">
+                      <ul class="list-unstyled">
+                        <blockquote>
+                          <header>{{newComment.rating}} Stars</header>
+                          <p></p>
+                          <p>{{newComment.comment}}</p>
+                          <footer>{{newComment.author}}, {{newComment.date | date}}</footer>
+                        </blockquote>
+                      </ul>
+                    </span>
                 <form class="form-horizontal" role="form" name="commentForm"
                 		ng-submit="submitComment()" novalidate>
-                    <div class="form-group"
-g-class="{ 'has-error' : commentForm.name.$error.required }">                        <label for="yourname" class="col-sm-2 control-label">Your Name</label>
+                    <div class="form-group" ng-class="{ 'has-error' :
+                    commentForm.yourname.$error.required &&
+                    !commentForm.yourname.$pristine }">
+                    <label for="yourname" class="col-sm-2 control-label">Your Name</label>
                         <div class="col-sm-10">
-                        <input ng-model="newComment.name" required class="form-control" id="yourname" name="yourname" placeholder="Enter First Name" type="text">
-                        <span ng-show="commentForm.name.$error.required && !commentForm.name.$pristine" class="help-block">Your Name is Required</span>
+                        <input ng-model="newComment.author" class="form-control" id="yourname" name="yourname"
+                        placeholder="Enter First Name" type="text" required>
+                        <span ng-show="commentForm.yourname.$error.required && !commentForm.yourname.$pristine"
+                        class="help-block">Your Name is Required</span>
                         </div>
-<div>{{commentForm.name.$error.required}}</div>
                     </div>
 
 
-                  <div class = "form-group">
-                    <label for="numStars" class="col-sm-2 control-label">Number of Stars:</label>
+                  <div class = "form-group" ng-class="{ 'has-error' : commentForm.rating.$error.required && !commentForm.rating.$pristine }">
+                    <label for="rating" class="col-sm-2 control-label">Number of Stars:</label>
                     <div class ="col-sm-10">
-                      <input ng-model="newComment.numStars" type="radio" value = "1" required>
-                      <span class= "numStars" style ="padding: 10px;">1</span>
-                      <input ng-model="newComment.numStars" name = "guests" type = "radio" value = "2">
-                      <span class= "numStars" style ="padding: 10px;">2</span>
-                      <input ng-model="newComment.numStars" name = "guests" type = "radio" value = "3">
-                      <span class= "numStars" style ="padding: 10px;">3</span>
-                      <input ng-model="newComment.numStars" name = "guests" type = "radio" value = "4">
-                      <span class= "numStars" style ="padding: 10px;">4</span>
-                      <input ng-model="newComment.numStars" name = "guests" type = "radio" value = "5">
-                      <span class= "numStars" style ="padding: 10px;">5</span>
+                      <input ng-model="newComment.rating" type="radio" value = "1" required>
+                      <span id = "rating" class= "rating" style ="padding: 10px;">1</span>
+                      <input ng-model="newComment.rating" name = "guests" type = "radio" value = "2">
+                      <span class= "rating" style ="padding: 10px;">2</span>
+                      <input ng-model="newComment.rating" name = "guests" type = "radio" value = "3">
+                      <span class= "rating" style ="padding: 10px;">3</span>
+                      <input ng-model="newComment.rating" name = "guests" type = "radio" value = "4">
+                      <span class= "rating" style ="padding: 10px;">4</span>
+                      <input ng-model="newComment.rating" name = "guests" type = "radio" value = "5">
+                      <span class= "rating" style ="padding: 10px;">5</span>
+                      <span ng-show="commentForm.rating.$error.required && !commentForm.rating.$pristine"
+                      class="help-block">Rating is Required</span>
                     </div>
-                    <p>{{newComment.numStars}}
+                    <p>{{newComment.rating}}
                   </div>
-                  <div class= "form-group">
+                  <div class= "form-group" ng-class = "{ 'has-error' : commentForm.yourComments.$error.required && !commentForm.yourComments.$pristine }">
                     <label for="yourComments" class ="col-sm-2 control-label">Your Comments:</label>
                     <div class="col-sm-10">
-                      <textarea ng-model="newComment.comment" class="form-control" id="yourComments" name="yourComments" rows="12"></textarea>
+                      <textarea ng-model="newComment.comment" class="form-control" id="yourComments" name="yourComments" rows="12" required></textarea>
+                      <span ng-show="commentForm.yourComments.$error.required && !commentForm.yourComments.$pristine"
+                      class="help-block">Comment is Required</span>
                     </div>
-                    <p>{{newComment.comment}}</p>
                   </div>
                   <div class="form-group">
                       <div class="col-sm-offset-2 col-sm-10">
-                          <button type="submit" class="btn btn-primary">Send Feedback</button>
+                        <button type="submit" class="btn btn-primary" ng-disabled="commentForm.$invalid">Send Feedback</button>
                       </div>
                   </div>
 
-
-					<p>Task 2: You need to validate that the user name and comments are entered</p>
                 </form>
             </div>
         </div>
